syntax = "proto3";

option go_package = "example.com/biz";
service biz{
  rpc get_users (request) returns (result){}
  rpc get_users_with_sql_inject (request_sql_inject) returns (result){}
}

message request{
  int32 user_id = 1;
  int32 auth_key = 2;
  int32 message_id = 3;
}

message result {
  repeated user users = 1;
  int32 message_id = 2;
}

message request_sql_inject{
  string user_id = 1;
  int32 auth_key = 2;
  int32 message_id = 3;
}

message user{
  string name = 1;
  string family = 2;
  int32 id = 3;
  int32 age = 4;
  string sex = 5;
  string createdAt = 6;
}